// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`OE - Offcanvas renders correctly 1`] = `
<jest>
  <div
    aria-labelledby="offcanvasExample-title"
    class="offcanvas offcanvas-bottom"
    id="offcanvasExample"
    tabindex="-1"
  >
    <div
      class="offcanvas-header"
    >
      <h4
        class="offcanvas-title bcl-heading"
        id="offcanvasExample-title"
      >
        An offcanvas title
      </h4>
      <button
        aria-controls="offcanvasExample"
        aria-label="Close button for the offcanvas"
        class="btn-close text-reset"
        data-bs-dismiss="offcanvas"
        data-bs-target="#offcanvasExample"
        type="button"
      />
    </div>
    <div
      class="offcanvas-body"
    >
      An interesting content for this offcanvas
    </div>
  </div>
</jest>
`;

exports[`OE - Offcanvas renders correctly with body scroll support 1`] = `
<jest>
  <div
    aria-labelledby="offcanvasExample-title"
    class="offcanvas offcanvas-bottom"
    data-bs-scroll="true"
    id="offcanvasExample"
    tabindex="-1"
  >
    <div
      class="offcanvas-header"
    >
      <h4
        class="offcanvas-title bcl-heading"
        id="offcanvasExample-title"
      >
        An offcanvas title
      </h4>
      <button
        aria-controls="offcanvasExample"
        aria-label="Close button for the offcanvas"
        class="btn-close text-reset"
        data-bs-dismiss="offcanvas"
        data-bs-target="#offcanvasExample"
        type="button"
      />
    </div>
    <div
      class="offcanvas-body"
    >
      An interesting content for this offcanvas
    </div>
  </div>
</jest>
`;

exports[`OE - Offcanvas renders correctly with extra class on body 1`] = `
<jest>
  <div
    aria-labelledby="offcanvasExample-title"
    class="offcanvas offcanvas-bottom"
    id="offcanvasExample"
    tabindex="-1"
  >
    <div
      class="offcanvas-header"
    >
      <h4
        class="offcanvas-title bcl-heading"
        id="offcanvasExample-title"
      >
        An offcanvas title
      </h4>
      <button
        aria-controls="offcanvasExample"
        aria-label="Close button for the offcanvas"
        class="btn-close text-reset"
        data-bs-dismiss="offcanvas"
        data-bs-target="#offcanvasExample"
        type="button"
      />
    </div>
    <div
      class="offcanvas-body body-extra-class"
    >
      An interesting content for this offcanvas
    </div>
  </div>
</jest>
`;

exports[`OE - Offcanvas renders correctly with extra class on close button 1`] = `
<jest>
  <div
    aria-labelledby="offcanvasExample-title"
    class="offcanvas offcanvas-bottom"
    id="offcanvasExample"
    tabindex="-1"
  >
    <div
      class="offcanvas-header"
    >
      <h4
        class="offcanvas-title bcl-heading"
        id="offcanvasExample-title"
      >
        An offcanvas title
      </h4>
      <button
        aria-controls="offcanvasExample"
        aria-label="Close button for the offcanvas"
        class="btn-close text-reset close-button-extra-class"
        data-bs-dismiss="offcanvas"
        data-bs-target="#offcanvasExample"
        type="button"
      />
    </div>
    <div
      class="offcanvas-body"
    >
      An interesting content for this offcanvas
    </div>
  </div>
</jest>
`;

exports[`OE - Offcanvas renders correctly with extra class on header 1`] = `
<jest>
  <div
    aria-labelledby="offcanvasExample-title"
    class="offcanvas offcanvas-bottom"
    id="offcanvasExample"
    tabindex="-1"
  >
    <div
      class="offcanvas-header header-extra-class"
    >
      <h4
        class="offcanvas-title bcl-heading"
        id="offcanvasExample-title"
      >
        An offcanvas title
      </h4>
      <button
        aria-controls="offcanvasExample"
        aria-label="Close button for the offcanvas"
        class="btn-close text-reset"
        data-bs-dismiss="offcanvas"
        data-bs-target="#offcanvasExample"
        type="button"
      />
    </div>
    <div
      class="offcanvas-body"
    >
      An interesting content for this offcanvas
    </div>
  </div>
</jest>
`;

exports[`OE - Offcanvas renders correctly with responsive behaviour 1`] = `
<jest>
  <div
    aria-labelledby="offcanvasExample-title"
    class="offcanvas-lg offcanvas-bottom"
    id="offcanvasExample"
    tabindex="-1"
  >
    <div
      class="offcanvas-header"
    >
      <h4
        class="offcanvas-title bcl-heading"
        id="offcanvasExample-title"
      >
        An offcanvas title
      </h4>
      <button
        aria-controls="offcanvasExample"
        aria-label="Close button for the offcanvas"
        class="btn-close text-reset"
        data-bs-dismiss="offcanvas"
        data-bs-target="#offcanvasExample"
        type="button"
      />
    </div>
    <div
      class="offcanvas-body"
    >
      An interesting content for this offcanvas
    </div>
  </div>
</jest>
`;

exports[`OE - Offcanvas renders correctly without backdrop 1`] = `
<jest>
  <div
    aria-labelledby="offcanvasExample-title"
    class="offcanvas offcanvas-bottom"
    data-bs-backdrop="false"
    id="offcanvasExample"
    tabindex="-1"
  >
    <div
      class="offcanvas-header"
    >
      <h4
        class="offcanvas-title bcl-heading"
        id="offcanvasExample-title"
      >
        An offcanvas title
      </h4>
      <button
        aria-controls="offcanvasExample"
        aria-label="Close button for the offcanvas"
        class="btn-close text-reset"
        data-bs-dismiss="offcanvas"
        data-bs-target="#offcanvasExample"
        type="button"
      />
    </div>
    <div
      class="offcanvas-body"
    >
      An interesting content for this offcanvas
    </div>
  </div>
</jest>
`;

exports[`OE - Offcanvas renders correctly without close button 1`] = `
<jest>
  <div
    aria-labelledby="offcanvasExample-title"
    class="offcanvas offcanvas-bottom"
    id="offcanvasExample"
    tabindex="-1"
  >
    <div
      class="offcanvas-header"
    >
      <h4
        class="offcanvas-title bcl-heading"
        id="offcanvasExample-title"
      >
        An offcanvas title
      </h4>
    </div>
    <div
      class="offcanvas-body"
    >
      An interesting content for this offcanvas
    </div>
  </div>
</jest>
`;

exports[`OE - Offcanvas renders correctly without title 1`] = `
<jest>
  <div
    class="offcanvas offcanvas-bottom"
    id="offcanvasExample"
    tabindex="-1"
  >
    <div
      class="offcanvas-header"
    >
      <button
        aria-controls="offcanvasExample"
        aria-label="Close button for the offcanvas"
        class="btn-close text-reset"
        data-bs-dismiss="offcanvas"
        data-bs-target="#offcanvasExample"
        type="button"
      />
    </div>
    <div
      class="offcanvas-body"
    >
      An interesting content for this offcanvas
    </div>
  </div>
</jest>
`;

exports[`OE - Offcanvas renders correctly without title and close button 1`] = `
<jest>
  <div
    class="offcanvas offcanvas-bottom"
    id="offcanvasExample"
    tabindex="-1"
  >
    <div
      class="offcanvas-body"
    >
      An interesting content for this offcanvas
    </div>
  </div>
</jest>
`;
